--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/html/html
+/html/html/*
 
 # Ignore all logfiles and tempfiles.
 /log/*
